--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Debug/
+Release/
+/.metadata/
+
+.settings/language.settings.xml
+.settings/
+**/.settings/**
+
+build_dir/
